wandb/run-20240313_001729-n8p9jl0n/files/output.log

<wandb.sdk.wandb_run.Run object at 0x7f7f80604070>
  File "<stdin>", line 7
    wandb.finish()
    ^^^^^
SyntaxError: invalid syntax